eb_parser/src/snapshots/eb_parser__expr__test__parse11.snap
---
source: src/expr.rs
expression: "parse_str(r#\"return 123\"#)"

---
Node {
    kind: Return(
        Node {
            kind: Int(
                123,
            ),
            loc: Location(
                7,
            ),
        },
    ),
    loc: Location(
        0,
    ),
}
