eb_parser/src/snapshots/eb_parser__expr__test__parse2.snap
---
source: src/expr.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    kind: BinOp(
        Add,
        Node {
            kind: Ident(
                "x",
            ),
            loc: Location(
                0,
            ),
        },
        Node {
            kind: Ident(
                "x",
            ),
            loc: Location(
                3,
            ),
        },
    ),
    loc: Location(
        2,
    ),
}
