eb_parser/src/snapshots/eb_parser__expr__test__parse5.snap
---
source: src/expr.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    kind: Call(
        Node {
            kind: Ident(
                "f",
            ),
            loc: Location(
                0,
            ),
        },
        [],
    ),
    loc: Location(
        1,
    ),
}
