eb_parser/src/snapshots/eb_parser__expr__test__parse7.snap
---
source: src/expr.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    kind: BinOp(
        Eq,
        Node {
            kind: Ident(
                "x",
            ),
            loc: Location(
                0,
            ),
        },
        Node {
            kind: Ident(
                "x",
            ),
            loc: Location(
                5,
            ),
        },
    ),
    loc: Location(
        2,
    ),
}
